css/non-index-style.css
@import url('https://fonts.googleapis.com/css2?family=Mr+Dafoe&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap');

.normal-sidebar {
    max-width: 50%;
    height: 90vh;
    display: inline;
    position: fixed;
    top: 4rem;
    left: 0rem;
    justify-items: end;
    z-index: 49;
    color: var(--color-amber-50);
    div {
        background-color: rgba(62, 62, 62, 0.95);
        display: none;
        border-radius: 1rem;
        padding-top: 1rem;
        padding-left: 0.5rem;
        padding-right: 0.5rem;
        overflow-y: auto;
        h1 {
            color: var(--color-amber-50);
        }
    }

    li {
        line-height: 1.2rem;
        margin-bottom: 0.5rem;
        border: 1px solid var(--color-amber-50);
        border-radius: 0.5rem;
        padding: 0.5rem;
        transition: color 1s, background-color 1s;
    }
}

.normal-sidebar:hover {
    display: flex;
    flex-direction: row-reverse;
    gap: 1rem;
    div {
        display: flex;
        flex-direction: column;
        align-items: center;
    }
}

.normal-sidebar li:hover {
    background-color: var(--color-amber-50);
    color: rgb(62, 62, 62);
}

@media only screen and (min-width: 1024px) {
    .normal-sidebar {
        width: full;
        max-width: 25%;
        height: auto;
        position: static;
        background-color: rgba(62, 62, 62, 0.95);
        img {
            margin-left: auto;
            margin-right: auto;
        }
        div {
            display: block;
            height: 100%;
            border-radius: 0;
            background-color: transparent;
        }
    }

    .normal-sidebar:hover {
        display: inline;
        flex-direction: initial;
        gap: initial;
        
        div {
            display: block;
            flex-direction: initial;
            align-items: initial;
        }
    }
    
}

.stock-container {
    width: 100%;
    overflow: hidden;
    background-color: black;
    height: 2rem;
}

.single-stock-plus {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 3px;
    color: blue;
}

.single-stock-plus p {
    color: green;
    margin: 0;
}

.single-stock-minus {
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 3px;
    color: blue;
}

.single-stock-minus p {
    color: red;
    margin: 0;
}

.stock-banner {
    display: flex;
    flex-direction: row;
    gap: 4rem;
    font-family: 'Courier New', Courier, monospace;
    height: 2rem;
    background-color: black;
    white-space: nowrap;
    animation: slideby 30s linear 0s infinite alternate;
}

@keyframes slideby {
    0% {
        transform: translateX(0%);
    }
    100% {
        transform: translateX(-50%);
    }
}

